--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="hero"></div>
 
     <!-- Content Section -->
-    <div class="content">
+    <section class="content">
       <div
         id="search-engine-optimization"
         class="search-engine-optimization content-bluebox"
@@ -83,10 +83,10 @@
           your lead generation.
         </p>
       </div>
-    </div>
+    </section>
 
     <!-- Benefits Section -->
-    <div class="benefits">
+    <section class="benefits">
       <div class="benefit-lead benefits-box">
         <h3>Lead Generation</h3>
         <img
@@ -120,7 +120,7 @@
           costs decrease, and you no longer need to advertise your page.
         </p>
       </div>
-    </div>
+    </section>
 
     <!-- Footer Section -->
     <footer class="footer">
