changed background color for benefits

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </nav>
     </header>
     <!-- Hero Main Page Picture -->
-    <div class="hero"></div>
+    <main class="hero"></main>
 
     <!-- Content Section -->
     <section class="content">
